println """
*******************************************
 You are building Mani!
 Output files will be in /build/libs
*******************************************
"""
group 'Mani'
version '1.0-SNAPSHOT'

apply from: 'config/ide.gradle'

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'idea'

mainClassName = 'Mani'

sourceSets.main.java.srcDirs = ['src']

sourceCompatibility = 1.8

ext.buildNumber = System.getenv("BUILD_NUMBER") ?: "dev"
version 'Stable'

task start(type: JavaExec) {
    classpath sourceSets.main.runtimeClasspath
    main = "com.mani.lang.main.Mani"
}

task startCompiled(type: JavaExec) {
    classpath sourceSets.main.runtimeClasspath
    main = "com.mani.compiler.ManiCompiler"
}

jar {
    manifest {
        attributes 'Main-Class': 'com.mani.lang.main.Mani'
    }
}

task buildCompiler(type: Jar) {
    manifest {
        attributes 'Main-Class': 'com.mani.compiler.ManiCompiler'
    }
    from {
        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    with jar
    sourceSets {
        main {
            resources {
                srcDirs "src/com/mani/compiler/resources"
            }
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'com.google.code.gson:gson:2.8.5'
    implementation 'com.squareup.okhttp3:okhttp:3.14.0'
    compile 'org.mongodb:mongo-java-driver:2.12.3'
    compile 'io.socket:socket.io-client:1.0.0'
    compile 'com.neovisionaries:nv-websocket-client:2.8'
}

// For IntelliJ
idea {
    module.excludeDirs += file('examples');

    module.downloadSources = true

    project {
        // Set JDK
        jdkName = '1.8'
        wildcards -= '!?*.groovy'

        ipr {
            withXml { xmlProvider ->
                def iprNode = xmlProvider.asNode()
                ideaActivateCopyright(iprNode)
                ideaActivateGradle(iprNode)
            }

            whenMerged { project -> 
                project.jdk.languageLevel = 'JDK_1_8'
            }
        }
    }

    workspace.iws.withXml { xmlProvider ->
        def iwsNode = xmlProvider.asNode()
        ideaMakeAutomatically(iwsNode)
        ideaRunConfig(iwsNode)
    }
}

cleanIdea.doLast {
    new File('Mani.iws').delete()
    new File('Mani.ipr').delete()
    new File('Mani.iml').delete()
}

